<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivBigPic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/big_image_margin"
        android:layout_marginTop="@dimen/big_image_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNameLabel"
            style="@style/secondary_text_view_style"
            android:text="@string/first_name_label" />

        <TextView
            android:id="@+id/tvNameValue"
            style="@style/primary_text_view_style"
            tools:text="@string/app_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSecondNameLabel"
            style="@style/secondary_text_view_style"
            android:text="@string/second_name_label" />

        <TextView
            android:id="@+id/tvSecondNameValue"
            style="@style/primary_text_view_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPasswordLabel"
            style="@style/secondary_text_view_style"
            android:text="@string/password_label" />

        <TextView
            android:id="@+id/tvPasswordValue"
            style="@style/primary_text_view_style"
            android:layout_width="0dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBirthdayLabel"
            style="@style/secondary_text_view_style"
            android:text="@string/birthday_label" />

        <TextView
            android:id="@+id/tvBirthdayValue"
            style="@style/primary_text_view_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTelLabel"
            style="@style/secondary_text_view_style"
            android:text="@string/tel_label" />

        <TextView
            android:id="@+id/tvTelValue"
            style="@style/primary_text_view_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvEmailLabel"
            style="@style/secondary_text_view_style"
            android:text="@string/email_label" />

        <TextView
            android:id="@+id/tvEmailValue"
            style="@style/primary_text_view_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddressLabel"
            style="@style/secondary_text_view_style"
            android:text="@string/address_label" />

        <TextView
            android:id="@+id/tvAddressValue"
            style="@style/primary_text_view_style" />

    </LinearLayout>

</LinearLayout>